@@ -1,3 +1,7 @@
+2006-08-06  Kevin Layer  <layer@relay.known.net>
+
+	* Makefile: tweaks for SuSE
+
 2006-07-30  root  <root@gills.dancysoft.com>
 1.1.55
 
